# SO-Project

./: .gitignore  CMakeLists.txt  README.md  init.sh  main.cpp  main_process.cpp  sensor  test_recolector
app/: main_process.cpp  main_recolector.cpp  monitor_run.cpp  sensor_run.cpp
files/: comandos.txt  ph.txt  temperatura.txt
include/: monitor.h  phSensor.h  sensor.h  stringValidations.h  temperatureSensor.h
src/: monitor.cpp  phSensor.cpp  sensor.cpp  stringValidations.cpp  temperatureSensor.cpp
